--- a/internal/projects/wood/Stamped/en.lproj/MainWindow.xib
+++ b/internal/projects/wood/Stamped/en.lproj/MainWindow.xib
@@ -49,7 +49,7 @@
 				</object>
 				<bool key="IBUIOpaque">NO</bool>
 				<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
-				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics" id="604252439">
+				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics" id="939454950">
 					<int key="IBUIStatusBarStyle">2</int>
 				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -57,22 +57,21 @@
 			</object>
 			<object class="IBUITabBarController" id="1034742383">
 				<object class="IBUISimulatedTabBarMetrics" key="IBUISimulatedBottomBarMetrics"/>
-				<reference key="IBUISimulatedStatusBarMetrics" ref="604252439"/>
+				<reference key="IBUISimulatedStatusBarMetrics" ref="939454950"/>
 				<object class="IBUISimulatedOrientationMetrics" key="IBUISimulatedOrientationMetrics">
 					<int key="IBUIInterfaceOrientation">1</int>
 					<int key="interfaceOrientation">1</int>
 				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<bool key="IBUIHorizontal">NO</bool>
-				<object class="IBUIViewController" key="IBUISelectedViewController" id="876889049">
-					<object class="IBUITabBarItem" key="IBUITabBarItem" id="588093446">
+				<object class="IBUIViewController" key="IBUISelectedViewController" id="237604569">
+					<object class="IBUITabBarItem" key="IBUITabBarItem" id="633327072">
 						<string key="IBUITitle">People</string>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">toolbar_people</string>
 						</object>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<reference key="IBUITabBar" ref="795333663"/>
 					</object>
 					<reference key="IBUIParentViewController" ref="1034742383"/>
 					<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
@@ -84,15 +83,14 @@
 					<bool key="IBUIHorizontal">NO</bool>
 				</object>
 				<array class="NSMutableArray" key="IBUIViewControllers">
-					<object class="IBUITableViewController" id="465131687">
-						<object class="IBUITabBarItem" key="IBUITabBarItem" id="496261017">
+					<object class="IBUITableViewController" id="861971896">
+						<object class="IBUITabBarItem" key="IBUITabBarItem" id="600816849">
 							<string key="IBUITitle">Stamps</string>
 							<object class="NSCustomResource" key="IBUIImage">
 								<string key="NSClassName">NSImage</string>
 								<string key="NSResourceName">toolbar_stamps</string>
 							</object>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-							<reference key="IBUITabBar" ref="795333663"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
 						<string key="IBUINibName">StampsListViewController</string>
@@ -112,7 +110,6 @@
 								<string key="NSResourceName">toolbar_activity</string>
 							</object>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-							<reference key="IBUITabBar" ref="795333663"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
 						<string key="IBUINibName">ActivityViewController</string>
@@ -123,16 +120,15 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBUIHorizontal">NO</bool>
 					</object>
-					<object class="IBUIViewController" id="327966317">
+					<object class="IBUIViewController" id="857875116">
 						<string key="IBUITitle">Stamp Action</string>
-						<object class="IBUITabBarItem" key="IBUITabBarItem" id="729828288">
+						<object class="IBUITabBarItem" key="IBUITabBarItem" id="636227653">
 							<string key="IBUITitle"/>
 							<object class="NSCustomResource" key="IBUIImage">
 								<string key="NSClassName">NSImage</string>
 								<string key="NSResourceName">toolbar_add_stamp</string>
 							</object>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-							<reference key="IBUITabBar" ref="795333663"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
 						<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
@@ -143,15 +139,14 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBUIHorizontal">NO</bool>
 					</object>
-					<object class="IBUIViewController" id="336273728">
-						<object class="IBUITabBarItem" key="IBUITabBarItem" id="240948346">
+					<object class="IBUIViewController" id="116762709">
+						<object class="IBUITabBarItem" key="IBUITabBarItem" id="1057301673">
 							<string key="IBUITitle">Must Do</string>
 							<object class="NSCustomResource" key="IBUIImage">
 								<string key="NSClassName">NSImage</string>
 								<string key="NSResourceName">toolbar_must_do</string>
 							</object>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-							<reference key="IBUITabBar" ref="795333663"/>
 						</object>
 						<reference key="IBUIParentViewController" ref="1034742383"/>
 						<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
@@ -162,14 +157,13 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBUIHorizontal">NO</bool>
 					</object>
-					<reference ref="876889049"/>
+					<reference ref="237604569"/>
 				</array>
 				<object class="IBUITabBar" key="IBUITabBar" id="795333663">
 					<reference key="NSNextResponder"/>
 					<int key="NSvFlags">266</int>
 					<string key="NSFrame">{{0, 431}, {320, 49}}</string>
 					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView"/>
 					<object class="NSColor" key="IBUIBackgroundColor">
 						<int key="NSColorSpace">3</int>
@@ -177,14 +171,6 @@
 					</object>
 					<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 					<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-					<array class="NSMutableArray" key="IBUIItems">
-						<reference ref="496261017"/>
-						<reference ref="807309489"/>
-						<reference ref="729828288"/>
-						<reference ref="240948346"/>
-						<reference ref="588093446"/>
-					</array>
-					<reference key="IBUISelectedItem" ref="588093446"/>
 				</object>
 			</object>
 		</array>
@@ -246,10 +232,10 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="795333663"/>
 							<reference ref="268481961"/>
-							<reference ref="327966317"/>
-							<reference ref="336273728"/>
-							<reference ref="876889049"/>
-							<reference ref="465131687"/>
+							<reference ref="857875116"/>
+							<reference ref="116762709"/>
+							<reference ref="237604569"/>
+							<reference ref="861971896"/>
 						</array>
 						<reference key="parent" ref="0"/>
 						<string key="objectName">Custom UI Tab Bar Controller</string>
@@ -280,55 +266,55 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">125</int>
-						<reference key="object" ref="327966317"/>
+						<reference key="object" ref="857875116"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="729828288"/>
+							<reference ref="636227653"/>
 						</array>
 						<reference key="parent" ref="1034742383"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">126</int>
-						<reference key="object" ref="729828288"/>
-						<reference key="parent" ref="327966317"/>
+						<reference key="object" ref="636227653"/>
+						<reference key="parent" ref="857875116"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">127</int>
-						<reference key="object" ref="336273728"/>
+						<reference key="object" ref="116762709"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="240948346"/>
+							<reference ref="1057301673"/>
 						</array>
 						<reference key="parent" ref="1034742383"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">128</int>
-						<reference key="object" ref="240948346"/>
-						<reference key="parent" ref="336273728"/>
+						<reference key="object" ref="1057301673"/>
+						<reference key="parent" ref="116762709"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">129</int>
-						<reference key="object" ref="876889049"/>
+						<reference key="object" ref="237604569"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="588093446"/>
+							<reference ref="633327072"/>
 						</array>
 						<reference key="parent" ref="1034742383"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">130</int>
-						<reference key="object" ref="588093446"/>
-						<reference key="parent" ref="876889049"/>
+						<reference key="object" ref="633327072"/>
+						<reference key="parent" ref="237604569"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">131</int>
-						<reference key="object" ref="465131687"/>
+						<reference key="object" ref="861971896"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="496261017"/>
+							<reference ref="600816849"/>
 						</array>
 						<reference key="parent" ref="1034742383"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">133</int>
-						<reference key="object" ref="496261017"/>
-						<reference key="parent" ref="465131687"/>
+						<reference key="object" ref="600816849"/>
+						<reference key="parent" ref="861971896"/>
 					</object>
 				</array>
 			</object>
@@ -363,67 +349,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">135</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">ActivityViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ActivityViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">CustomUITabBarController</string>
-					<string key="superclassName">UITabBarController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CustomUITabBarController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">StampedAppDelegate</string>
-					<string key="superclassName">NSObject</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="tabBarController">CustomUITabBarController</string>
-						<string key="window">UIWindow</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="tabBarController">
-							<string key="name">tabBarController</string>
-							<string key="candidateClassName">CustomUITabBarController</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="window">
-							<string key="name">window</string>
-							<string key="candidateClassName">UIWindow</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/StampedAppDelegate.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">StampsListViewController</string>
-					<string key="superclassName">UITableViewController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">stampCell</string>
-						<string key="NS.object.0">UITableViewCell</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">stampCell</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">stampCell</string>
-							<string key="candidateClassName">UITableViewCell</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/StampsListViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
